--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -1,5 +1,24 @@
+#page{
+    background: #f5f5f5;
+}
+
 .container h1, h4{
     text-align: center;
+}
+
+hr{
+    width: 10%;
+}
+
+#home{
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.col-sm{
+    background: white;
+    margin-left: 5px;
+    margin-right: 5px;
 }
 
 .col-sm p{
