--- a/bootstrap/style.css
+++ b/bootstrap/style.css
@@ -2,6 +2,56 @@
     background: #f5f5f5;
 }
 
+table{
+    background: gray;
+}
+.logo a img{
+    width: 100px;
+    height: 100px;
+}
+
+.text{
+    color: white;
+}
+
+.text h1 a{
+    color: white;
+}
+
+.brand{
+    margin-left: 10%;
+    margin-right: 10%;
+}
+
+.table tr th{
+    padding-left: 10%;
+} 
+
+#tombol .menu{
+    padding-right: 50px;
+    padding-bottom: 30px;
+}
+
+.btn-group{
+    height: 100%;
+    width: 100%;
+}
+
+.menu{
+    width: 100%;
+    height: 100%;
+    cursor: pointer;    
+}
+
+.menu span{ 
+    display: block;
+    width: 50px;
+    height: 5px;
+    background:white;
+    margin-bottom: 4px;
+}
+
+
 .container h1, h4{
     text-align: center;
 }
